管理接单新增订单分类

--- a/less/public.less
+++ b/less/public.less
@@ -468,6 +468,12 @@ input,a,ul,li,button {
 		label {
 			width: 100%;
 		}
+		.info-vtc {
+			vertical-align: middle;
+		}
+		.mt-4 {
+			margin-top: 0.2rem;
+		}
 		.timeto {
 			margin: 0 0.4rem
 		}
@@ -936,6 +942,11 @@ input,a,ul,li,button {
 				margin-left: 1.0rem;
 				font-size: 0.7rem;
 				color: @999;
+			}
+			.recived-order {
+				float: right;
+				font-size: 0.7rem;
+				color: #1aad19;
 			}
 		}
 		.pt-18 {
@@ -2446,5 +2457,21 @@ input,a,ul,li,button {
 				height: 5.45rem;
 			}
 		}
+	}
+}
+
+.neutral-header {
+	display: flex;
+	height: 2.25rem;
+	background: #fff;
+	a {
+		flex: 1;
+		font-size: 0.7rem;
+		color: #999;
+		text-align: center;
+		line-height: 2.25rem;
+	}
+	.neutral-active {
+		color: #000;
 	}
 }
