修复了用户头部信息宽度问题

--- a/less/public.less
+++ b/less/public.less
@@ -1975,6 +1975,7 @@ input,a,ul,li,button {
 		box-sizing: border-box;
 		.user {
 			display: inline-block;
+			width: 7.7rem;
 			margin-bottom: 3.65rem;
 			.user-text {
 				font-size: 0.5rem;
