--- a/less/public.less
+++ b/less/public.less
@@ -919,6 +919,7 @@ input,a,ul,li,button {
 		.avatar3{
 			width: 3.2rem;
 			height: 3.2rem;
+			border-radius: 50%;
 		}
 	}
 	.avatar {
@@ -926,6 +927,7 @@ input,a,ul,li,button {
 		img{
 			width: 3.0rem;
 			height: 3.0rem;
+			border-radius: 50%;
 		}
 	}
 	.pt-p-b {
@@ -1159,6 +1161,7 @@ input,a,ul,li,button {
 	width: 3.0rem;
 	height: 3.0rem;
 	margin: 1.7rem auto 0;
+	border-radius: 50%;
 }
 .name {
 	font-size: 0.9rem;
@@ -1976,7 +1979,7 @@ input,a,ul,li,button {
 		.user {
 			display: inline-block;
 			width: 7.7rem;
-			margin-bottom: 3.65rem;
+			margin-bottom: 3rem;
 			.user-text {
 				font-size: 0.5rem;
 				color: @999;
