更改了订单部分背景和修复了选择设备页面最后设备被遮盖的问题

--- a/less/public.less
+++ b/less/public.less
@@ -158,7 +158,7 @@
 }
 
 body {
-	background-color: #eee;
+	background-color: #efeff4;
 }
 
 p,h1,h2,h3,h4 {
@@ -674,7 +674,11 @@ input,a,ul,li,button {
 		}
 	}
 }
-
+	.eqm-last{
+		li:last-child {
+			margin-bottom: 3.75rem;
+		}
+	}
 //播放按钮
 .play {
 	display: inline-block;
@@ -1846,7 +1850,7 @@ input,a,ul,li,button {
 		background: transparent;
 	}
 	.order-bg {
-		background: transparent;
+		background: #efeff4;
 		margin: 0;
 	}
 	.order-title {
