--- a/less/public.less
+++ b/less/public.less
@@ -1682,12 +1682,16 @@ input,a,ul,li,button {
 
 .eqm-text {
 	font-size: 0.8rem;
-	width: 3rem;
-	margin-left: 1.75rem;
 	white-space: nowrap;
 	overflow: hidden;
 }
-
+.eqm-ann {
+	font-size: 0.8rem;
+	position: absolute;
+	right: 4.2rem;
+	white-space: nowrap;
+	overflow: hidden;
+}
 .pay-wrapper {
 	width: 9.85rem;
 	height: 8.5rem;
