--- a/less/public.less
+++ b/less/public.less
@@ -158,6 +158,8 @@
 }
 
 body {
+	padding: 0;
+	margin:0;
 	background-color: #efeff4;
 }
 
@@ -2307,7 +2309,7 @@ input,a,ul,li,button,.swiper-pagination {
 }
 .city-select {
 	width: 100%;
-	height: 9.0rem;
+	height: 10rem;
 	position: absolute;
 	left: 0;
 	top: 4.2rem;
@@ -2315,17 +2317,19 @@ input,a,ul,li,button,.swiper-pagination {
 	display: none;
 	.city-list {
 		height: 100%;
+		font-size: 0;
+		padding-bottom: 2.2rem;
+		box-sizing: border-box;
 		overflow: scroll;
 		li {
-			width: 28%;
-			height: 0.7rem;
+			width: 30%;
 			display: inline-block;
-			padding: .5rem .2rem;
+			padding: .5rem 0;
+			margin: .3rem 0 0 2.5%;
 			font-size: 0.7rem;
 			text-align: center;
 			background: #fff;
 			border-radius: 0.25rem;
-			margin: 0.25rem 0.15rem;
 			white-space: nowrap;
 			overflow: hidden;
 		}
