--- a/less/public.less
+++ b/less/public.less
@@ -371,7 +371,7 @@ input,a,ul,li,button,.swiper-pagination {
 	box-sizing: border-box;
 	background: #fff;
 	margin-left: 0.5rem;
-	margin-top: -0.15rem;
+	margin-top: .35rem;
 	text-align: center;
 	line-height: 1.4rem;
 }
@@ -428,32 +428,10 @@ input,a,ul,li,button,.swiper-pagination {
 	background: #fff;
 	list-style: none;
 	margin-top: 0.5rem;
-	.info-h {
-		padding: 0.5rem 0;
-		.info-right{
-			.right-desc{
-				margin-left: 0.7rem;
-				p {
-					width: 14.0rem;
-					font-size: 0.7rem;
-					color: #555;
-					span {
-						font-size: 0.6rem;
-						color: #999;
-					}
-				}
-				.dis {
-					width: 14.0rem;
-					font-size: 0.7rem;
-					color: #999;
-					margin-top: 0.5rem;
-				}
-			}
-
-		}
-	}
 	.info-list {
-		padding: 0.55rem 0.7rem 0.55rem 0;
+		padding-right: .7rem;
+		height: 2.2rem;
+		line-height: 2.2rem;
 		margin-left: 0.7rem;
 		border-bottom: 1px solid #e5e5e5;
 		font-size: 0;
@@ -473,14 +451,13 @@ input,a,ul,li,button,.swiper-pagination {
 		.info-vtc {
 			vertical-align: middle;
 		}
-		.mt-4 {
-			margin-top: 0.2rem;
-		}
 		.timeto {
 			margin: 0 0.4rem
 		}
 		.checked {
 			float:right;
+			height: 2.2rem;
+			line-height: 2.2rem;
 			font-size: 0.7rem;
 			color: #09bb07;
 			display: none;
@@ -488,8 +465,8 @@ input,a,ul,li,button,.swiper-pagination {
 		.info-left {
 			display: inline-block;
 			width: 3.0rem;
-			height: 1.1rem;
-			line-height: 1.1rem;
+			height: 2.2rem;
+			line-height: 2.2rem;
 			font-size: 0.8rem;
 			img {
 				margin-top: 0.8rem;
@@ -502,8 +479,7 @@ input,a,ul,li,button,.swiper-pagination {
 			vertical-align: top;
 		}
 		.info-right {
-			// height: 1.1rem;
-			line-height: 1.1rem;
+			line-height: 2.2rem;
 			font-size: 0.8rem;
 			color: @gray;
 			.img-users {
@@ -518,7 +494,6 @@ input,a,ul,li,button,.swiper-pagination {
 			font-size: 0.8rem;
 			margin-top: -0.25rem;
 			color: @gray;
-
 		}
 		.last-exp {
 			width: 12.0rem;
@@ -527,9 +502,11 @@ input,a,ul,li,button,.swiper-pagination {
 			text-overflow: ellipsis;
 		}
 		.info-item {
-			height: 1.1rem;
-			line-height: 1.1rem;
 			font-size: 0.8rem;
+		}
+		.fr-c {
+			float: right;
+			margin-top: .35rem;
 		}
 		.info-textarea {
 			width: 12.0rem;
@@ -565,22 +542,21 @@ input,a,ul,li,button,.swiper-pagination {
 			width: 16rem;
 		}
 		.server-price {
-			height: 1.1rem;
-			line-height: 1.1rem;
+			height: 2.2rem;
+			line-height: 2.2rem;
 			font-size: 0.8rem;
 			color: #4a4a4a;
 			text-align: center;
 		}
 		.text {
-			height: 1.1rem;
-			line-height: 1.1rem;
+			height: 2.2rem;
+			line-height: 2.2rem;
 			font-size: 0.7rem;
 			color: #4a4a4a;
 		}
 		.money {
 			font-size: 0.7rem;
 			color: #e64340;
-			margin-top: 0.15rem;
 		}
 		.btn-text {
 			font-size: 0.8rem;
@@ -596,10 +572,6 @@ input,a,ul,li,button,.swiper-pagination {
 			display: inline-block;
 			width: 2.25rem;
 			font-size: 1.15rem;
-		}
-		.info-title {
-			line-height: 1.1rem;
-			font-size: 0.8rem;
 		}
 		.gender {
 			opacity: 0;
@@ -623,11 +595,61 @@ input,a,ul,li,button,.swiper-pagination {
 		.call {
 			height: 1.5rem;
 			float: right;
+			margin-top: .35rem;
+		}
+	}
+	.info-list-more {
+		padding: .55rem .7rem .55rem 0;
+		line-height: 1.1rem;
+		margin-left: 0.7rem;
+		border-bottom: 1px solid #e5e5e5;
+		font-size: 0;
+		.info-left {
+			display: inline-block;
+			width: 3.0rem;
+			height: 1.1rem;
+			line-height: 1.1rem;
+			font-size: 0.8rem;
+			img {
+				margin-top: 0.8rem;
+			}
+		}
+		.info-left-width {
+			width: 4.0rem;
+		}
+		.info-right {
+			line-height: 1.1rem;
+			font-size: 0.8rem;
+			color: @gray;
+			.img-users {
+				width: 2.1rem;
+				height: 2.1rem;
+			}
+		}
+		.info-title {
+			font-size: 0.8rem;
+		}
+		.autowrap {
+			display: inline-block;
+			width: 14.0rem;
+			line-height: 1.6rem;
+			font-size: 0.8rem;
 			margin-top: -0.25rem;
+			color: @gray;
+		}
+		.vl-t {
+			vertical-align: top;
+		}
+		.textarea {
+			width: 14.0rem;
+			line-height: 1.1rem;
+			font-size: 0.8rem;
+			color: #999;
+			vertical-align: top;
+			resize: none;
 		}
 		form {
-			margin-top: 1.0rem;
-			margin-bottom: 0.2rem;
+			margin-top: 1rem;
 			font-size: 0.8rem;
 			color: #4a4a4a;
 			.trust-wrapper {
@@ -652,6 +674,30 @@ input,a,ul,li,button,.swiper-pagination {
 			.trust-value {
 				font-size: 0.5rem;
 				color: #e64340;
+			}
+		}
+	}
+	.info-h {
+		padding: 0.5rem 0;
+		.info-right{
+			.right-desc{
+				margin-left: 0.7rem;
+				p {
+					width: 14.0rem;
+					font-size: 0.7rem;
+					color: #555;
+					span {
+						font-size: 0.6rem;
+						color: #999;
+					}
+				}
+				.dis {
+					width: 14.0rem;
+					line-height: 1.0rem;
+					font-size: 0.7rem;
+					color: #999;
+					margin-top: 0.5rem;
+				}
 			}
 		}
 	}
@@ -779,6 +825,10 @@ input,a,ul,li,button,.swiper-pagination {
 		border: 1px solid @ccc;
 		border-radius: 0.3rem;
 	}
+}
+.adjust {
+	margin-bottom: -.5rem;
+	border-bottom: 1px solid #e5e5e5;
 }
 .repairing-title {
 	text-align: left;
@@ -1065,13 +1115,9 @@ input,a,ul,li,button,.swiper-pagination {
 	}
 	.text-content {
 		float: left;
-		width: 12.1rem;
-		height: 1.1rem;
+		height: 1rem;
 		line-height: 1.1rem;
 		font-size: 0.7rem;
-		height: 1.0rem;
-		line-height: 1.0rem;
-		margin-top: 0.1rem;
 		color: @999;
 		white-space: nowrap;
 		overflow: hidden;
@@ -1328,11 +1374,11 @@ input,a,ul,li,button,.swiper-pagination {
 	}
 }
 .verify {
-	margin: 0.5rem 0 1.0rem;
 	.info-list {
 		font-size: 0.8rem;
-		padding: 0.55rem 0;
 		position: relative;
+		height: 2.2rem;
+		line-height: 2.2rem;
 		.info-left {
 			display: inline-block;
 			width: 4.55rem;
@@ -1363,11 +1409,15 @@ input,a,ul,li,button,.swiper-pagination {
 			}
 		}
 		.certified {
+			height: 2.2rem;
+			line-height: 2.2rem;
 			float: right;
 			color: #000;
 			margin-right: 0.7rem;
 		}
 		.to-certified {
+			height: 2.2rem;
+			line-height: 2.2rem;
 			float: right;
 			margin-right: 0.7rem;
 			color: @999;
@@ -1379,6 +1429,7 @@ input,a,ul,li,button,.swiper-pagination {
 		input {
 			width: 11.4rem;
 			padding: 0;
+			font-size: 0.8rem;
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
@@ -1676,11 +1727,11 @@ input,a,ul,li,button,.swiper-pagination {
 
 .select-text {
 	height: 2.2rem;
+	line-height: 2.2rem;
 	font-size: 0.8rem;
-	padding: 0.55rem 0 0.55rem 0.7rem;
+	padding-left: .7rem;
 	color: @888;
 	background: @fff;
-	box-sizing: border-box;
 	.w-16 {
 		display: inline-block;
 		width: 16.2rem;
@@ -1797,8 +1848,9 @@ input,a,ul,li,button,.swiper-pagination {
 	float: right;
 	width: 0.4rem;
 	height: 0.7rem;
+	line-height: 2.2rem;
 	color: #c7c7c7;
-	margin: 0.2rem 0.7rem;
+	margin: 0 .35rem;
 }
 .more-middle {
 	position: absolute;
@@ -1964,23 +2016,22 @@ input,a,ul,li,button,.swiper-pagination {
 		}
 	}
 }
-
-.user-wrapper {
+.user-mask{
 	width: 100%;
+	height: 100%;
+	position: absolute;
+	right: 0;
+	top: 0;
+	background: rgba(0,0,0,.5);
+	display: none;
+}
+.user-wrapper {
+	width: 10.9rem;
 	height: 100%;
 	position: absolute;
 	left: -100%;
 	top: 0;
 	transition: all 1s ease;
-	.user-mask{
-		width: calc(~"100% - 10.9rem");
-		height: 100%;
-		position: absolute;
-		right: 0;
-		top: 0;
-		background: rgba(0,0,0,.5);
-		display: none;
-	}
 	.user-info {
 		position: absolute;
 		left: 0;
