--- a/less/public.less
+++ b/less/public.less
@@ -184,6 +184,9 @@ a {
 	outline: none;
 	text-decoration: none;
 }
+a:hover,a:link,a:active,a:visited {
+	text-decoration: none;
+}
 ul,textarea {
 	padding: 0;
 	margin: 0;
@@ -217,6 +220,11 @@ input,a,ul,li,button,.swiper-pagination {
 .bg-height {
 	width: 18.75rem;
 	height: 28.15rem;
+}
+.container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 .block {
 	display: block;
@@ -1161,14 +1169,14 @@ input,a,ul,li,button,.swiper-pagination {
 }
 //导航
 .nav-wrapper {
-	padding: 0.55rem 0;
+	// padding: 0.55rem 0;
 	background: @fff;
 	width: 100%;
 	display: flex;
 	.nav-item {
 		flex: 1;
-		height: 0.9rem;
-		line-height: 0.9rem;
+		height: 2rem;
+		line-height: 2rem;
 		font-size: 0.7rem;
 		color: #9b9b9b;
 		text-align: center;
@@ -1562,11 +1570,11 @@ input,a,ul,li,button,.swiper-pagination {
 .problem-disc {
 	width: 100%;
 	margin-top: 0.7rem;
+	font-size: 0.8rem;
 	box-sizing: border-box;
 	padding: 0.4rem 0 0 0.7rem;
 	height: 8.5rem;
 	resize: none;
-	color: @gray;
 }
 .problem-voice {
 	padding: 1.0rem 3.0rem;
@@ -1732,6 +1740,11 @@ input,a,ul,li,button,.swiper-pagination {
 	padding-left: .7rem;
 	color: @888;
 	background: @fff;
+	.select-addr {
+		height: 1.1rem;
+		font-size: 0.8rem;
+		line-height: 1.1rem;
+	}
 	.w-16 {
 		display: inline-block;
 		width: 16.2rem;
@@ -2286,11 +2299,12 @@ input,a,ul,li,button,.swiper-pagination {
 	height: 1.7rem;
 	position: absolute;
 	left: 1.1rem;
-	bottom: 8rem;
+	top: 8rem;
 	text-align: center;
 	background: #fff;
-	border: 1px solid #f8f8f8;
+	border: 2px solid #f8f8f8;
 	border-radius: 0.25rem;
+	box-shadow: 0 0 4px 1px #ccc;
 	.icon-location {
 		position: absolute;
 		left: 50%;
