调整了地位图标跟按钮的位置

--- a/less/public.less
+++ b/less/public.less
@@ -2246,7 +2246,7 @@ input,a,ul,li,button,.swiper-pagination {
 	height: 1.6rem;
 	border-radius: 0.8rem;
 	position: fixed;
-	top: 6rem;
+	top: 5rem;
 	right: 1.0rem;
 	transition: all .25s;
 	-webkit-tap-highlight-color: transparent;
@@ -2299,7 +2299,7 @@ input,a,ul,li,button,.swiper-pagination {
 	height: 1.7rem;
 	position: absolute;
 	left: 1.1rem;
-	top: 8rem;
+	top: 4.9rem;
 	text-align: center;
 	background: #fff;
 	border: 2px solid #f8f8f8;
@@ -2331,11 +2331,15 @@ input,a,ul,li,button,.swiper-pagination {
 	top: 0;
 	display: none;
 	.menu-header {
-		padding: 0.55rem 1.45rem;
+		padding: 0 1.425rem;
+		height: 2.0rem;
+		line-height: 2.0rem;
 		display: flex;
 		font-size: 0.9rem;
 		background: #fff;
 		a{
+			height: 2rem;
+			line-height: 1.9rem;
 			flex: 1;
 		}
 		i{
@@ -2346,6 +2350,7 @@ input,a,ul,li,button,.swiper-pagination {
 			text-align: center;
 		}
 		.icon-X {
+			line-height: 1.9rem;
 			text-align: right;
 		}
 	}
