--- a/less/public.less
+++ b/less/public.less
@@ -354,10 +354,10 @@ input,a,ul,li,button,.swiper-pagination {
 	background: #fff;
 }
 .btn-xs {
+	width: 4rem;
 	height: 1.5rem;
-	line-height: 1.1rem;
+	line-height: 1.4rem;
 	font-size: 0.8rem;
-	padding: 0.2rem 0.95rem;
 	border: 1px solid #353535;
 	background: #fff;
 }
@@ -378,8 +378,6 @@ input,a,ul,li,button,.swiper-pagination {
 	border: 1px solid #353535;
 	box-sizing: border-box;
 	background: #fff;
-	margin-left: 0.5rem;
-	margin-top: .35rem;
 	text-align: center;
 	line-height: 1.4rem;
 }
@@ -515,6 +513,7 @@ input,a,ul,li,button,.swiper-pagination {
 		.fr-c {
 			float: right;
 			margin-top: .35rem;
+			margin-left: .5rem;
 		}
 		.info-textarea {
 			width: 12.0rem;
@@ -592,6 +591,7 @@ input,a,ul,li,button,.swiper-pagination {
 		}
 		.free {
 			float: right;
+			margin-top: .35rem;
 			position: relative;
 			input {
 				width: 2.2rem;
@@ -735,6 +735,46 @@ input,a,ul,li,button,.swiper-pagination {
 			margin-bottom: 3.75rem;
 		}
 	}
+
+//租赁设备列表
+.lease-list {
+	background: #fff;
+	list-style: none;
+	margin-top: 0.5rem;
+	.lease-item {
+		padding: .6rem .7rem .6rem 0;
+		margin-left: 0.7rem;
+		border-bottom: 1px solid #e5e5e5;
+		font-size: 0;
+		position: relative;
+		&:last-child {
+			border-bottom: 0;
+		}
+		.lease-name {
+			display: inline-block;
+			width: 4rem;
+			font-size: .8rem;
+		}
+		.v-m {
+			display: inline-block;
+			position: absolute;
+			right: 0.7rem;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+		.l-80 {
+			width: 2.2rem;
+			left: 4rem;
+		}
+		.r-104 {
+			right: 5.2rem;
+		}
+		.hui {
+			color: #b2b2b2;
+			font-weight: 300;
+		}
+	}
+}
 //播放按钮
 .play {
 	display: inline-block;
