修复了部分页面的显示问题

--- a/less/public.less
+++ b/less/public.less
@@ -645,6 +645,11 @@ input,a,ul,li,button,.swiper-pagination {
 			margin-top: -0.25rem;
 			color: @gray;
 		}
+		.balh {
+			margin-top: 0;
+			color: #000;
+			line-height: 1.1rem;
+		}
 		.vl-t {
 			vertical-align: top;
 		}
@@ -655,6 +660,7 @@ input,a,ul,li,button,.swiper-pagination {
 			color: #999;
 			vertical-align: top;
 			resize: none;
+			margin-top: 0;
 		}
 		form {
 			margin-top: 1rem;
@@ -1040,6 +1046,14 @@ input,a,ul,li,button,.swiper-pagination {
 	.pt-text {
 		float: left;
 		width: 12.8rem;
+		.user-name {
+			display: block;
+			height: 1.3rem;
+			line-height: 1.3rem;
+			margin-top: 0.35rem;
+			font-size: 0.9rem;
+			color: #555;
+		}
 		.pt-title {
 			font-size: 0.8rem;
 			height: 1.1rem;
@@ -1071,6 +1085,17 @@ input,a,ul,li,button,.swiper-pagination {
 			span {
 				margin-right: 1.0rem;
 			}
+			.attct {
+				font-size: 0.6rem;
+				margin-right: 1.0rem;
+			}
+		}
+		.sign {
+			width: 12rem;
+			font-size: 0.7rem;
+			margin-top: 0.5rem;
+			color: #999;
+			line-height: 1rem;
 		}
 	}
 }
@@ -1914,6 +1939,15 @@ input,a,ul,li,button,.swiper-pagination {
 	color: #c7c7c7;
 	transform: translateY(-50%);
 }
+.more-t-60 {
+	position: absolute;
+	right: 0.7rem;
+	top: 3rem;
+	width: 0.4rem;
+	height: 0.7rem;
+	color: #c7c7c7;
+}
+
 .more-v {
 	display: inline-block;
 	height: 0.7rem;
