--- a/less/public.less
+++ b/less/public.less
@@ -1,14 +1,14 @@
-@888: #888;
+@888: #888888;
 @gray: #b2b2b2;
-@999: #999;
-@ccc: #ccc;
+@999: #999999;
+@ccc: #cccccc;
 @green: #1aad19;
-@fff: #fff;
+@fff: #ffffff;
 
 @font-face {
 	font-family: 'machine';
-	src:  url('fonts/machine.eot?gp6ouq');
-	src:  url('fonts/machine.eot?gp6ouq#iefix') format('embedded-opentype'),
+	src: url('fonts/machine.eot?gp6ouq');
+	src: url('fonts/machine.eot?gp6ouq#iefix') format('embedded-opentype'),
 		url('fonts/machine.ttf?gp6ouq') format('truetype'),
 		url('fonts/machine.woff?gp6ouq') format('woff'),
 		url('fonts/machine.svg?gp6ouq#machine') format('svg');
@@ -428,6 +428,138 @@ input,a,ul,li,button,.swiper-pagination {
 		margin-bottom: 0.4rem;
 	}
 }
+
+//菜单按钮
+.yellow {
+	background: #ffa000;
+}
+
+.blue {
+	background: #40c4ff;
+}
+
+.green {
+	background: #00e676;
+}
+
+.purple {
+	background: #8e24aa;
+}
+
+.pink {
+	background: #e91e63;
+}
+
+.menu-item {
+	position: relative;
+	display: inline-block;
+	width: 2.5rem;
+	height: 2.5rem;
+	font-size: 0.9rem;
+	color: #fff;
+	text-align: center;
+	line-height: 2.5rem;
+	border: none;
+	border-radius: 50%;
+	cursor: pointer;
+	box-shadow: 0 0.1rem 0.25rem 0 rgba(0, 0, 0, 0.11);
+	transition: .3s;
+
+	.icon-bars {
+		background: #fff;
+		height: 1px;
+		width: 1.1rem;
+		margin: auto;
+		display: block;
+		position: relative;
+		transition: 0.3s 0.3s;
+
+		&:after {
+			content: '';
+			position: absolute;
+			height: 1.1rem;
+			width: 1px;
+			background: #fff;
+			top: -0.5rem;
+		}
+	}
+}
+
+
+.menu-content {
+	position: absolute;
+	right: 1rem;
+	bottom: 2rem;
+	transition: all .3s;
+
+	.menu-triger {
+		z-index: 15;
+		float: left;
+	}
+
+	.menu-list {
+			.menu-item {
+		position: absolute;
+		right: 0;
+		top: 0;
+		opacity: 0;
+		transform: scale(0, 0);
+
+		&:nth-child(1) {
+			transition: 0.2s 0.3s;
+		}
+
+		&:nth-child(2) {
+			transition: 0.2s 0.5s;
+		}
+
+		&:nth-child(3) {
+			transition: 0.2s 0.7s;
+		}
+
+		&:nth-child(4) {
+			transition: 0.2s 0.9s;
+		}
+	}
+	}
+}
+
+.menu-content.open {
+	.cion-bars {
+		transform: rotate(45deg);
+	}
+
+	.menu-list {
+		.menu-item {
+			opacity: 1;
+			transform: scale(0.9, 0.9);
+
+			&:nth-child(1) {
+				top: -11.0rem;
+				transition: 0.2s 0.9s;
+			}
+
+			&:nth-child(2) {
+				top: -8.25rem;
+				transition: 0.2s 0.7s;
+			}
+
+			&:nth-child(3) {
+				top: -5.5rem;
+				transition: 0.2s 0.5s;
+			}
+
+			&:nth-child(4) {
+				top: -2.75rem;
+				transition: 0.2s 0.3s;
+			}
+		}
+	}
+}
+
+
+
+
 
 //表单
 .info-wrapper {
