--- a/less/public.less
+++ b/less/public.less
@@ -535,24 +535,12 @@ button,
 }
 
 //菜单按钮
-.yellow {
-	background: #ffa000;
-}
-
-.blue {
-	background: #40c4ff;
-}
-
 .green {
-	background: #00e676;
+	background: #1aad19;
 }
 
-.purple {
-	background: #8e24aa;
-}
-
-.pink {
-	background: #e91e63;
+.light-green {
+	background: #7ed321;
 }
 
 .menu-item {
